Tests/project2/errors/relations.flm
/* This tests for an invalid relation */

fun foo()
    begin
    while 1 do skip  /* invalid relation */
    end


        
